added connection to database into appsettings.json and Startup class

--- a/DotNetCoreCrc/src/DotNetCoreWebApi/appsettings.json
+++ b/DotNetCoreCrc/src/DotNetCoreWebApi/appsettings.json
@@ -2,7 +2,10 @@
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    },
+    "ConnectionString": {
+      "LabDb": "server=localhost\\SQLEXPRES; database=:LabDb; trusted_connection=true"
+    },
+    "AllowedHosts": "*"
+  }
 }
