changed json connection file and Startup class

--- a/DotNetCoreCrc/src/DotNetCoreWebApi/appsettings.json
+++ b/DotNetCoreCrc/src/DotNetCoreWebApi/appsettings.json
@@ -1,11 +1,11 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-JP06AIC\\PATRYKSQL;Database=ContosoUniversity1;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
-    },
-    "ConnectionString": {
-      "LabDb": "server=localhost\\SQLEXPRES; database=:LabDb; trusted_connection=true"
-    },
-    "AllowedHosts": "*"
+    }
   }
 }
