added interface IMeasurementRepository

--- a/DotNetCoreCrc/src/DotNetCoreWebApi/appsettings.json
+++ b/DotNetCoreCrc/src/DotNetCoreWebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-JP06AIC\\PATRYKSQL;Database=ContosoUniversity1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "LabDb": "Server=DESKTOP-JP06AIC\\PATRYKSQL;Database=LabDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
